Issue #26071: bdist_wininst created binaries fail to start and find 32bit Python